sign up image alignment corrected

--- a/src/desktopSignupPage/Desktopsignup.module.css
+++ b/src/desktopSignupPage/Desktopsignup.module.css
@@ -113,7 +113,7 @@
   background: rgba(11, 219, 182, 1);
 }
 
-.buttonSignup:hover{
+.buttonSignup:hover {
   background: rgba(31, 239, 202, 1);
   box-shadow: 0px 2px 4.7px 0px rgba(90, 90, 90, 0.1);
   color: rgba(255, 255, 255, 1);
@@ -290,20 +290,24 @@
 
 .signupRight {
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 494px;
-  /*height: 740px; */
   height: 668.26px;
   border-radius: 33.45px;
 }
 
 .signupRightImage {
   box-sizing: border-box;
-  width: 494px;
-  /*height: 740px; */
-  height: 668.26px;
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 33.45px;
   box-shadow: 0px 0px 77.8px 0px rgba(0, 0, 0, 0.15);
-  background: rgba(215, 215, 215, 1);
 }
 
 /*otp screen styles below*/
